--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Tyler's Portfolio</title>
 	<meta name="description"
 		content="A portfolio showcasing technologies I have been learning and projects I have completed">
-	<meta name="author" content="Tyler Boggle">
+	<meta name="author" content="@@@FirstName LastName@@@">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -29,7 +29,7 @@
 				<ul class="navbar-nav mr-auto">
 					<!-- contact email info -->
 					<li class="navbar-item p-3">
-						<a href="FirsName.MiddInitial.LasName@gmail.com">Reach Out to Me!</a>
+						<a href="@@@EmailAddressHere@gmail.com@@@">Reach Out to Me!</a>
 					</li>
 				</ul>
 				<ul class="navbar-nav">
@@ -39,7 +39,11 @@
 					</li>
 					<!-- GitHub account -->
 					<li class="nav-item p-3">
-						<a href="https://github.com/FirsNameLasName" target="_blank"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
+						<a href="https://github.com/@@@GitHubUserName@@@" target="_blank"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
+					</li>
+					<!-- LinkedIn account -->
+					<li class="nav-item p-3">
+						<a href="https://www.linkedin.com/in/@@@linkedInUsername@@@" target="_blank"><i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -121,7 +125,7 @@
 	<div class="container row mx-auto">
 		<span class="col-lg-6">
 			<h2 class="section-title">About Me</h2>
-			<p class="col-sm-8 mx-auto">"Dedicated to continuous improvement" is my mission statement. I am willing, able, and eager to develop as a programmer.</p>
+			<p class="col-sm-8 mx-auto">@@@One or two sentence mission statement@@@</p>
 		</span>
 		<span class="col-lg-6">
 			<h2 class="section-title">What I Have Used In Projects</h2>
