--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 					<li class="nav-item p-3">
 						<a href="https://github.com/FirsNameLasName" target="_blank"><i class="fa fa-lg fa-github" aria-hidden="true"></i></a>
 					</li>
+					<!-- Insta account -->
+					<li class="nav-item p-3">
+						<a href="https://instagram.com/FirsNameLasName" target="_blank"><i class="fa fa-lg fa-instagram" aria-hidden="true"></i></a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -59,22 +63,14 @@
 	<div class="container row mx-auto">
 		<div class="card mx-auto mt-4">
 			<a href="@@@projectGitHubUrl@@@" target="_blank">
-				<img class="card-img-top gif-portion" id="gif1" src="eclipseDemo.gif">
-			</a>
-			<a href="@@@projectGitHubUrl@@@" target="_blank">
 				<img class="card-img-top img-portion" id="img1" src="royaltyFreeEarth.png">
 			</a>
 			<div class="card-body">
 				<h4 class="card-title">@@@ProjectTitle@@@</h4>
 				<p class="card-text">@@@One or two sentences of learning outcomes@@@</p>
-				<a href="@@@gitHubCodeRepoUrl@@@" class="btn btn-primary" target="_blank">CODE</a>
-				<a href="@@@projectGitHubUrl@@@" class="btn btn-primary" target="_blank">HOSTED</a>
 			</div>
 		</div>
 		<div class="card mx-auto mt-4">
-			<a href="@@@projectGitHubUrl@@@" target="_blank">
-				<img class="card-img-top gif-portion" id="gif2" src="unityDemo.gif">
-			</a>
 			<a href="@@@projectGitHubUrl@@@" target="_blank">
 				<img class="card-img-top img-portion" id="img2" src="royaltyFreehtmlCode.png">
 			</a>
@@ -87,9 +83,6 @@
 		</div>
 		<div class="card mx-auto mt-4">
 			<a href="@@@projectGitHubUrl@@@" target="_blank">
-				<img class="card-img-top gif-portion" id="gif3" src="unityDemo2.gif">
-			</a>
-			<a href="@@@projectGitHubUrl@@@" target="_blank">
 				<img class="card-img-top img-portion" id="img3" src="royaltyFreematrix.png">
 			</a>
 			<div class="card-body">
@@ -100,9 +93,6 @@
 			</div>
 		</div>
 		<div class="card mx-auto mt-4">
-			<a href="@@@projectGitHubUrl@@@" target="_blank">
-				<img class="card-img-top gif-portion" id="gif4" src="vscDemo.gif">
-			</a>
 			<a href="@@@projectGitHubUrl@@@" target="_blank">
 				<img class="card-img-top img-portion" id="img4" src="royaltyFreesecurity.png">
 			</a>
